Fixed the margins on the menu to be full width again, set up the overflows so that the popout menu scrolls properly on small screens

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,32 +1,23 @@
 html, body, .container, .content-wrap{
     font-family: 'PT Mono', monospace;
-    overflow: hidden;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .container {
 	background: #06090E;
     color: #99BAC1;
-}
-
-.menu-wrap a {
-	color: #b8b7ad;
-}
-
-.menu-wrap a:hover,
-.menu-wrap a:focus {
-	color: white;
-    background: none;
+    padding: 0;
 }
 
 .content-wrap{
-    overflow-y: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
 
 .content{
-	margin-left: 16em;
+	margin-left: 15%;
     position: relative;
     background: #06090E;
 }
@@ -53,36 +44,52 @@ html, body, .container, .content-wrap{
 }
 
 /* Menu */
+
+.menu-wrap a {
+	color: #b8b7ad;
+}
+
+.menu-wrap a:hover,
+.menu-wrap a:focus {
+	color: white;
+    background: none;
+}
+
 .menu-wrap {
 	position: absolute;
 	z-index: 1001;
-	width: 16em;
+	width: 15%;
+    min-width: 10em;
 	height: 100%;
 	background: #001e27;
-	padding: 1%;
+    padding: 1% 0 1% 0;
 	font-size: 1.15em;
 }
 
 .menu, 
 .menu-list {
-	height: 100%;
     text-align: center;
     overflow: hidden;
 }
 
+.menu{
+    height: 100%;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 .menu-list {
+    height: 70%;
+    min-height: 9em;
     text-align: center;
     padding-left: 0;
+    padding-bottom: 1.5em;
+    overflow-x: hidden;
 }
 
 .menu-list a {
 	display: block;
     text-align: center;
-}
-
-.menu-list a span {
-	margin-left: 10px;
-	font-weight: 700;
 }
 
 .image-container{/*center the image*/
@@ -96,13 +103,16 @@ html, body, .container, .content-wrap{
     position: absolute;
     bottom:0;
     left:0;
-    height: 4em;
-    width: 14em;
-    margin-left: 1em;
+    height: 5%;
+    min-height: 3em;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     background: #001e27;
     border-style: solid;
     border-color: #99BAC1;
-    border-width: 0.05em 0 0 0;
+    border-width: 0.1em 0 0 0;
+    overflow-y: visible;
 }
 
 .miniFooterContent{
@@ -131,7 +141,7 @@ html, body, .container, .content-wrap{
 a.dropdown-item:hover{
     color:white;
     background: #00373F;
-    width: 16em;
+    width: 100%;
 }
 
 a.accordionButton{
@@ -148,12 +158,19 @@ a.dropdown-item{
 a.accordionButton:focus{
     color: white;
     background: #486D75;
-    width: 16em;
+    width: 100%;
 }
 
 .collapse{
     color: #99BAC1;
     background: none;
-    width: 16em;
+    width: 100%;
+                overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+
+.footer{
+    margin: 10em;
 }
 
