--- a/assets/css/slideout.css
+++ b/assets/css/slideout.css
@@ -8,26 +8,21 @@ html, body, .container, .content-wrap{
 .container {
 	background: #06090E;
     color: #99BAC1;
+	padding: 0;
 }
 
-.menu-wrap a {
-	color: #b8b7ad;
-}
 
-.menu-wrap a:hover,
-.menu-wrap a:focus {
-	color: white;
-    background: none;
-}
 
 .content-wrap{
-    overflow-y: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
 
 .content{
     position: relative;
     background: #06090E;
+		margin-left: 3.75em;
+		margin-right: 0.25em;
 }
 
 .content::before{
@@ -52,7 +47,7 @@ html, body, .container, .content-wrap{
 .menu-button {
 	position: fixed;
     top: .25em;
-    left: .75em;
+    left: .25em;
 	z-index: 1000;
 	margin: 0;
 	padding: 0;
@@ -109,7 +104,7 @@ html, body, .container, .content-wrap{
 .sideMailButton{
     position: fixed;
     top: 4.15em;
-    left: 1.0em;
+    left: 0.5em;
 	z-index: 1000;
 	margin: 0;
 	padding: 0;
@@ -123,7 +118,7 @@ html, body, .container, .content-wrap{
 .sideGithubButton{
     position: fixed;
     top: 2.35em;
-    left: 1.075em;
+    left: 0.575em;
 	z-index: 1000;
 	margin: 0;
 	padding: 0;
@@ -137,21 +132,32 @@ html, body, .container, .content-wrap{
 .spacer{
     position: fixed;
     top:0;
-    left: 0.9em;
-    height: 8.75em;
-    width: 3.3em;
+    left: 0;
+    height: 100%;
+    width: 3.5em;
     background: #001e27;
     z-index: 999;
 }
 
 /* Menu */
+.menu-wrap a {
+	color: #b8b7ad;
+}
+
+.menu-wrap a:hover,
+.menu-wrap a:focus {
+	color: white;
+    background: none;
+}
+
 .menu-wrap {
 	position: absolute;
 	z-index: 1001;
-	width: 16em;
+	width: 15%;
+	min-width: 14em;
 	height: 100%;
 	background: #001e27;
-	padding: 1%;
+	padding: 1% 0 1% 0;
 	font-size: 1.15em;
 	-webkit-transform: translate3d(-16em,0,0);
 	transform: translate3d(-16em,0,0);
@@ -165,14 +171,22 @@ html, body, .container, .content-wrap{
 .menu-list {
 	height: 100%;
     text-align: center;
-	overflow: hidden;
+}
+
+.menu{
+    height: 100%;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .menu-list {
 	-webkit-transform: translate3d(0,100%,0);
 	transform: translate3d(0,100%,0);
     text-align: center;
+	height: 70%;
+	min-height: 9em;
     padding-left: 0;
+	padding-bottom: 1.5em;
 }
 
 .menu-list a {
@@ -262,13 +276,16 @@ html, body, .container, .content-wrap{
     position: absolute;
     bottom:0;
     left:0;
-    height: 4em;
-    width: 14em;
-    margin-left: 1em;
+    height: 5%;
+	min-height: 3em;
+    width: 100%;
+    margin-left: auto;
+	margin-right: auto;
     background: #001e27;
     border-style: solid;
     border-color: #99BAC1;
-    border-width: 0.05em 0 0 0;
+    border-width: 0.1em 0 0 0;
+	overflow: visible;
 }
 
 .miniFooterContent{
@@ -297,7 +314,7 @@ html, body, .container, .content-wrap{
 a.dropdown-item:hover{
     color:white;
     background: #00373F;
-    width: 16em;
+    width: 100%;
 }
 
 a.accordionButton{
@@ -314,13 +331,13 @@ a.dropdown-item{
 a.accordionButton:focus{
     color: white;
     background: #486D75;
-    width: 16em;
+    width: 100%;
 }
 
 .collapse{
     color: #99BAC1;
     background: none;
-    width: 16em;
+    width: 100%;
 }
 
 /*.sidebarLabel{
